# picow-rom-emu

./: .gitignore  CMakeLists.txt  README.md  makerom.py  makerom.sh  makerom_asm.sh  makerom_py.sh  upload.sh
examples/: lcd_helloworld.s  led_alternate.s  led_alternate_stack.s
src/: bin.h  cmd.c  cmd.h  main.c  rom.c  rom.h  rom.s  rom_bin.h
